# Inno_taxi

./: .env  Cargo.toml  build.rs
migrations/2022-09-09-134138_List_of_Users/: up.sql
migrations/2022-09-09-135443_List_of_Drivers/: up.sql
proto/: response.proto
src/: build.rs  dbconn.rs  driver_service.rs  main.rs  order_service.rs  schema.rs  user_service.rs
src/api/: api_for_driver_service.rs  api_for_user_service.rs  mod.rs
src/models/: delivery_kafka_msg.rs  driver.rs  mod.rs  order.rs  traits.rs  user.rs
src/order_response/: mod.rs  respose.rs
