[package]
name = "inno_taxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rdkafka = "0.28.0"
async-trait = "0.1.57"
tokio = { version = "1.21.1", features = ["full"] }
tonic = "0.8.1"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"


[[bin]]
name="user_service"
path="src/user_service.rs"


[[bin]]
name="driver_service"
path="src/driver_service.rs"


[[bin]]
name="order_service"
path="src/order_service.rs"




